Textarea pre-wrap Bug

--- a/static/styles/design.css
+++ b/static/styles/design.css
@@ -663,7 +663,7 @@ body {
 }
 
 .t_area .e_text  {
-  white-space: pre;
+  white-space: pre-wrap;
   margin: 0 0 0 10px;
   min-height: 88px;
   max-width: 100%;
